<resources>
    <string name="app_name">Task_2</string>
    <string name="it_ruh_dnipro"><a href="http://www.itruh.dp.ua/">IT Ruh Dnipro</a></string>
    <string name="yalantis"><a href="https://yalantis.com/">Yalantis</a></string>
    <string name="action_settings">Налаштування</string>
    <string name="title">CE-1257218</string>
    <string name="main_text">Відкритий люк</string>
    <string name="status">В роботі</string>
    <string name="description">Открытый люк (возле рекламного щита), район поворота 18 и 19 трамваев на проспект Мира с Донецкого шоссе</string>
    <string name="section">Розділ:</string>
    <string name="section_text">Комунальне господарство</string>
    <string name="create">Створено:</string>
    <string name="create_text">25 Лютого 2016</string>
    <string name="registered">Зареєстровано:</string>
    <string name="registered_text">26 Лютого 2016</string>
    <string name="deadline">Вирішити до:</string>
    <string name="deadline_text">29 Лютого 2016</string>
    <string name="executor">Відповідальний:</string>
    <string name="executor_text">Дніпропетровський МВК()</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="all_appeals">Всі звернення</string>
    <string name="on_map_appeals">Звернення на мапі</string>
    <string name="sign_in">Увійти в аккаунт</string>
    <string name="made_with_love">Зроблено з любов\'ю</string>
    <string name="and">та</string>
    <string name="menu_item_sort">Сортувати</string>
    <string name="title_activity_main">e-contact</string>
    <string name="press_again_to_exit">Натисніть ще раз, щоб вийти</string>
    <string name="at_work">В роботі</string>
    <string name="done">Виконано</string>
    <string name="pending_execution">Очікує</string>
</resources>
